yaml update for render

--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,27 @@
 services:
   - type: web
-    name: story-app
+    name: tinytales-frontend
     env: docker
     plan: free
-    dockerContext: .
-    dockerfilePath: ./tinytales-frontend/Dockerfile
-    buildCommand: docker compose build
-    startCommand: docker compose up
+    dockerContext: ./tinytales-frontend
+    dockerfilePath: Dockerfile
     autoDeploy: true
+    envVars:
+      - key: NEXT_PUBLIC_API_URL
+        value: https://tinytales-backend.onrender.com
+
+  - type: web
+    name: tinytales-backend
+    env: docker
+    plan: free
+    dockerContext: ./tinytales-backend
+    dockerfilePath: Dockerfile
+    autoDeploy: true
+    envVars:
+      - key: PORT
+        value: 8000
+      - key: HOST
+        value: 0.0.0.0
+      - key: ENV
+        value: production
+      # Add more env vars as needed (or use secrets for sensitive ones)
