--- a/tinytales-frontend/dockerfile
+++ b/tinytales-frontend/dockerfile
@@ -27,4 +27,4 @@ COPY --from=builder /app/.next ./.next
 COPY --from=builder /app/node_modules ./node_modules
 COPY --from=builder /app/package.json ./package.json
 
-CMD ["npm", "start"]
+CMD ["npm","run", "start"]
